# NimbleSM

./: .clang-format  .gitignore  .mailmap  AUTHORS  BUILD.md  CMakeLists.txt  CMakeLists.txt.backup  J2-plasticity.md  LICENSE  README.md  RUN.md  annotated.html  arborx__parallel__contact__manager_8cc.html  arborx__parallel__contact__manager_8h.html  arborx__parallel__contact__manager_8h_source.html  arborx__serial__contact__manager_8cc.html  arborx__serial__contact__manager_8h.html  arborx__serial__contact__manager_8h_source.html  arborx__utils_8h.html  arborx__utils_8h_source.html  bvh__contact__manager_8cc.html  bvh__contact__manager_8h.html  bvh__contact__manager_8h_source.html  class_expression_parsing_1_1_equation_context-members.html  class_expression_parsing_1_1_equation_context.html  class_expression_parsing_1_1_memory_manager-members.html  class_expression_parsing_1_1_memory_manager.html  classes.html  classnimble_1_1_block-members.html  classnimble_1_1_block.html  classnimble_1_1_block_base-members.html  classnimble_1_1_block_base.html  classnimble_1_1_block_material_interface_base-members.html  classnimble_1_1_block_material_interface_base.html  classnimble_1_1_block_material_interface_factory_base-members.html  classnimble_1_1_block_material_interface_factory_base.html  classnimble_1_1_boundary_condition-members.html  classnimble_1_1_boundary_condition.html  classnimble_1_1_boundary_condition_manager-members.html  classnimble_1_1_boundary_condition_manager.html  (+491 more)
src/: CMakeLists.txt  nimble.cc  nimble.h  nimble.mpi.json.h  nimble.mpi.mpicontext.h  nimble.mpi.rank_clique_reducer.h  nimble.mpi.reduction.cc  nimble.mpi.reduction.h  nimble.mpi.reduction.reduction_base.h  nimble.mpi.reduction.v1.h  nimble.mpi.reduction.v2.h  nimble.mpi.reduction.v3.h  nimble.mpi.reduction.v4.h  nimble.mpi.reduction.v5.h  nimble.mpi.reduction.v6.cc  nimble.mpi.reduction.v6.h  nimble.mpi.reduction_utils.cc  nimble.mpi.reduction_utils.h  nimble.mpi.serialization.h  nimble.mpi.utils.h  nimble.quanta.arrayview.h  nimble.quanta.cc  nimble.quanta.functional.cc  nimble.quanta.h  nimble.quanta.out.h  nimble.quanta.stopwatch.h  nimbleSM.cc  nimble_arrayview.h  nimble_block.cc  nimble_block.h  nimble_block_base.cc  nimble_block_base.h  nimble_block_material_interface_base.h  nimble_block_material_interface_factory_base.h  nimble_boundary_condition.cc  nimble_boundary_condition.h  nimble_boundary_condition_manager.cc  nimble_boundary_condition_manager.h  nimble_cli.cc  nimble_cli.h  (+95 more)
src/contact/: CMakeLists.txt  arborx_utils.h  kokkos_contact_manager.cc  kokkos_contact_manager.h
src/deprecated/: nimble_darma.cc  nimble_darma_utils.cc  nimble_darma_utils.h  nimble_kokkos.cc  nimble_kokkos.h  nimble_kokkos_main.cc  nimble_tpetra.cc
src/integrators/: CMakeLists.txt  explicit_time_integrator.cc  explicit_time_integrator.h  integrator_base.cc  integrator_base.h  quasistatic_time_integrator.cc  quasistatic_time_integrator.h
src/mpi-buckets/: CMakeLists.txt  Makefile  compile_commands.json
src/mpi_buckets/: CMakeLists.txt  Makefile  README.md  compile_commands.json
src/parser/: CMakeLists.txt  compile_commands.json
src/preskin/: CMakeLists.txt  boundary.cpp  boundary.hpp  main.cpp
src/uq/: CMakeLists.txt  nimble_uq.cc  nimble_uq.h  nimble_uq_block.cc  nimble_uq_block.h  nimble_uq_model_data.cc  nimble_uq_model_data.h
test/: CMakeLists.txt  run_exodiff_test.py  run_test.py
test/ball_in_cup_contact/: ball_in_cup_contact.g  ball_in_cup_contact.in  ball_in_cup_contact.jou  ball_in_cup_contact.serial.e
test/brick_with_fiber_periodic/: CMakeLists.txt  brick_with_fiber_periodic.g  brick_with_fiber_periodic.g.2.1  brick_with_fiber_periodic.gold.e
test/brick_with_fibers/: CMakeLists.txt  brick_with_fibers.g  brick_with_fibers.g.2.0  brick_with_fibers.g.4.0  brick_with_fibers.g.4.1  brick_with_fibers.g.4.3  brick_with_fibers.gold.e  brick_with_fibers.jou
test/bvh_fastcollide/: CMakeLists.txt  fastcollide.g.4.2  fastcollide.g.4.3  fastcollide.g.8.0  fastcollide.g.8.2  fastcollide.g.8.4  fastcollide.g.8.7
test/bvh_two_body/: two_body_contact.g.2.0  two_body_contact.in
test/combined_contact/: combined_edge_contact.in  combined_face_contact.in  combined_node_contact.in  combined_project.g
test/contact/: CMakeLists.txt
test/contact_entity_creation/: CMakeLists.txt  contact_entity_creation.exodiff  contact_entity_creation.g.2.1  contact_entity_creation.g.3.0  contact_entity_creation.g.3.1  contact_entity_creation.g.3.2  contact_entity_creation.g.4.2  contact_entity_creation.g.4.3  contact_entity_creation.gold.e  contact_entity_creation.in
test/cubes_contact/: CMakeLists.txt  cubes_contact.g  cubes_contact.gold.e  cubes_contact.in  cubes_contact.jou
test/cylinder_with_hole/: cylinder_with_hole.exodiff  cylinder_with_hole.g.4.2  cylinder_with_hole.g.4.3  cylinder_with_hole.g.8.0  cylinder_with_hole.gold.e
test/cylinder_with_hole_multiblock_rve/: cylinder_with_hole.g  cylinder_with_hole.g.8.3  cylinder_with_hole.g.8.4  cylinder_with_hole.g.8.5  cylinder_with_hole.g.8.6  cylinder_with_hole.g.8.7  cylinder_with_hole.in  rve.g
test/dynamics/: CMakeLists.txt
test/explicit/: CMakeLists.txt
test/notched_plate/: CMakeLists.txt  CMakeLists.txt.disabled  notched_plate.g.6.0  notched_plate.g.6.4  notched_plate.g.6.5  notched_plate.in  notched_plate.jou  notched_plate_lame_hypoelastic.exodiff  notched_plate_lame_hypoelastic.gold.e  notched_plate_lame_hypoelastic.in  notched_plate_native_hypoelastic.gold.e  notched_plate_native_neohookean.gold.e  notched_plate_native_neohookean.in  notched_plate_ngp_lame_hypoelastic.exodiff  notched_plate_ngp_lame_hypoelastic.in  notched_plate_ngp_lame_neohookean.exodiff  notched_plate_ngp_lame_neohookean.in
test/notched_plate_hypoelastic_lame/: CMakeLists.txt  notched_plate.gold.e  notched_plate.in
test/notched_plate_lame/: CMakeLists.txt  notched_plate.in
test/quasistatic/: CMakeLists.txt
unit_tests/: CMakeLists.txt  nimble_unit_main.cc  projection_node_to_face.cc  test_nimble_kokkos_material.cc  test_nimble_material_params.cc  test_nimble_utils.cc
(+1216 files in other folders)
